objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ADL_Assitance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if participant needs assistance with ADL.</inlineHelpText>
        <label>ADL Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acquired_at_Age__c</fullName>
        <description>Age at which contact acquired the disability.</description>
        <inlineHelpText>Age at which contact acquired the disability.</inlineHelpText>
        <label>Acquired at Age</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>0-10</fullName>
                </value>
                <value>
                    <fullName>11-20</fullName>
                </value>
                <value>
                    <fullName>21-30</fullName>
                </value>
                <value>
                    <fullName>31-40</fullName>
                </value>
                <value>
                    <fullName>41-50</fullName>
                </value>
                <value>
                    <fullName>51+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activities__c</fullName>
        <label>Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kayaking</fullName>
                </value>
                <value>
                    <fullName>Cycling</fullName>
                </value>
                <value>
                    <fullName>Hiking</fullName>
                </value>
                <value>
                    <fullName>Camping</fullName>
                </value>
                <value>
                    <fullName>Backpacking</fullName>
                </value>
                <value>
                    <fullName>Cross-Country Skiing</fullName>
                </value>
                <value>
                    <fullName>Working with teens/mentoring</fullName>
                </value>
                <value>
                    <fullName>River Running (teen trips)</fullName>
                </value>
                <value>
                    <fullName>River Running (adult trips)</fullName>
                </value>
                <value>
                    <fullName>Special Events/Outreach</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Social Media/Technology</fullName>
                </value>
                <value>
                    <fullName>Office Administration/Data Entry</fullName>
                </value>
                <value>
                    <fullName>Service projects (trail cleaning, etc.)</fullName>
                </value>
                <value>
                    <fullName>Healthy Day Recreation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Addition_Info_Related_to_Medication__c</fullName>
        <label>Additional Info Related to Medication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Info_Related_to_Disability__c</fullName>
        <inlineHelpText>Anything else the participant would like you to know regarding his/her disability.</inlineHelpText>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>The age of the contact calculated from the Date of Birth</description>
        <formula>IF( NOT( ISBLANK( Birthdate ) ) ,
  IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Birthdate ),
     YEAR (Today()) - YEAR ( Birthdate ) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the age of the contact calculated from the Date of Birth</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allergies__c</fullName>
        <inlineHelpText>List all allergies including food, airborne, animal, etc.</inlineHelpText>
        <label>Allergies</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Taken__c</fullName>
        <label>Amount Taken</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_of_Expertise__c</fullName>
        <label>Area of Expertise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistive_Tech__c</fullName>
        <description>Assistive technology used for sensory sensitivities.</description>
        <inlineHelpText>Assistive technology used for sensory sensitivities.</inlineHelpText>
        <label>Assistive Tech</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention_to_Task__c</fullName>
        <label>Attention to Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Average (5+ minutes)</fullName>
                </value>
                <value>
                    <fullName>Fair (1 - 5 minutes)</fullName>
                </value>
                <value>
                    <fullName>Poor (0 - 1 minute)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <description>General balance of individual.</description>
        <inlineHelpText>Describe general balance of the individual</inlineHelpText>
        <label>Balance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavior_Details__c</fullName>
        <description>More details about participant&apos;s behavior.</description>
        <label>Behavior Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Behavior__c</fullName>
        <description>The participant demonstrates one or more of these behaviors</description>
        <inlineHelpText>Pick from the list according to the participant intake.</inlineHelpText>
        <label>Behavior</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No concerns</fullName>
                </value>
                <value>
                    <fullName>Aggression</fullName>
                </value>
                <value>
                    <fullName>Self-injurious</fullName>
                </value>
                <value>
                    <fullName>Injurious towards others</fullName>
                </value>
                <value>
                    <fullName>Runs away</fullName>
                </value>
                <value>
                    <fullName>Property destruction</fullName>
                </value>
                <value>
                    <fullName>Unusual or repetitive behaviors</fullName>
                </value>
                <value>
                    <fullName>Self stimulating</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavioral_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The participant requires 1:1 behavioral support</description>
        <inlineHelpText>When checked the participant requires 1:1 behavioral support.</inlineHelpText>
        <label>Behavioral Support 1:1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Below_Amount_Listed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Based on household size, annual income is below the amounts listed.</inlineHelpText>
        <label>Below Amount Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benevon_Status__c</fullName>
        <description>The status of the contact within the Benevon Model. If blank then the contact is not part of our Benevon effort yet.</description>
        <inlineHelpText>What is the status of the contact within the Benevon Model. If blank then the contact is not part of our Benevon effort yet.</inlineHelpText>
        <label>Benevon Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Benevon_Status_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_of_Military__c</fullName>
        <label>Branch of Military</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Marine Corps</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPR_Certificate_Expiration_Date__c</fullName>
        <label>CPR Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPR_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the volunteer has a CPR Certification.</inlineHelpText>
        <label>CPR Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caregiver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Person who accompanies a participant in an adventure to provide 1-to-1 care. This person is not a volunteer, but a personal caregiver.</description>
        <label>Caregiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Alias_Contact_Data__c</fullName>
        <label>C&amp;P Alias Contact Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Alias_Index__c</fullName>
        <externalId>true</externalId>
        <label>C&amp;P Connect Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Global_Rank__c</fullName>
        <label>C&amp;P Patron Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Expiration_date__c</fullName>
        <label>C&amp;P Lift Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Average__c</fullName>
        <label>C&amp;P Average Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Last__c</fullName>
        <label>C&amp;P Last Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Maximum__c</fullName>
        <label>C&amp;P Maximum Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Minimum__c</fullName>
        <label>C&amp;P Minimum Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Total_Intrinsic__c</fullName>
        <label>C&amp;P Total Personal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Total_extrinsic__c</fullName>
        <label>C&amp;P Total Network Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Connect_Link__c</fullName>
        <formula>IF(CnP_PaaS__CnP_Connect_Alias_Index__c != null, HYPERLINK(&apos;https://Connect.ClickandPledge.com/Fundraiser/&apos;+CnP_PaaS__CnP_Connect_Alias_Index__c, &apos;https://Connect.ClickandPledge.com/Fundraiser/&apos;+CnP_PaaS__CnP_Connect_Alias_Index__c, &apos;_blank&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C&amp;P Connect Global Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognition_No_Concerns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>There are no concerns about participant cognition or processing.</description>
        <inlineHelpText>Check the box if there are no concerns about the participant&apos;s cognition or processing.</inlineHelpText>
        <label>No concerns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Congenital__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The contact&apos;s disability is congenital.</description>
        <inlineHelpText>The contact&apos;s disability is congenital.</inlineHelpText>
        <label>Disability is Congenital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demographics__c</fullName>
        <label>Demographics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>Asian Pacific</fullName>
                </value>
                <value>
                    <fullName>Caucasian</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>Latino-not of Hispanic descent</fullName>
                </value>
                <value>
                    <fullName>Native American</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_Relationship__c</fullName>
        <description>Describe the relationship between volunteer and participant(s)</description>
        <inlineHelpText>For example, family, friends, caregiver (ffc)</inlineHelpText>
        <label>Describe Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dietary_Restrictions__c</fullName>
        <description>Dietary restrictions, preferences or concerns</description>
        <label>Dietary Restrictions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <label>Disability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autism</fullName>
                </value>
                <value>
                    <fullName>Amputation</fullName>
                </value>
                <value>
                    <fullName>Arthritis</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Behavioral</fullName>
                </value>
                <value>
                    <fullName>Cerebral Palsy</fullName>
                </value>
                <value>
                    <fullName>Cognitive</fullName>
                </value>
                <value>
                    <fullName>Cystic Fibrosis</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Down Syndrome</fullName>
                </value>
                <value>
                    <fullName>Epilepsy/Seizure Disorder</fullName>
                </value>
                <value>
                    <fullName>Hearing Impairment</fullName>
                </value>
                <value>
                    <fullName>Mental Illness</fullName>
                </value>
                <value>
                    <fullName>Multiple Sclerosis</fullName>
                </value>
                <value>
                    <fullName>Muscular Dystrophy</fullName>
                </value>
                <value>
                    <fullName>PTSD</fullName>
                </value>
                <value>
                    <fullName>Spina Bifida</fullName>
                </value>
                <value>
                    <fullName>Stroke</fullName>
                </value>
                <value>
                    <fullName>Spinal Cord Injury</fullName>
                </value>
                <value>
                    <fullName>Traumatic Brain Injury</fullName>
                </value>
                <value>
                    <fullName>Vision Impairment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Asperger’s Syndrome</fullName>
                    <isActive>false</isActive>
                    <label>Asperger’s Syndrome</label>
                </value>
                <value>
                    <fullName>Epilepsy</fullName>
                    <isActive>false</isActive>
                    <label>Epilepsy</label>
                </value>
                <value>
                    <fullName>Seizure Disorder</fullName>
                    <isActive>false</isActive>
                    <label>Seizure Disorder</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discharge_Date__c</fullName>
        <label>Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked it means that the contact drives - own transportation.</description>
        <label>Paticipant drives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Educational__c</fullName>
        <description>Participant&apos;s cognitive and processing.</description>
        <inlineHelpText>Pick one or more from the list.</inlineHelpText>
        <label>Educational</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Knows numbers</fullName>
                </value>
                <value>
                    <fullName>Knows letters</fullName>
                </value>
                <value>
                    <fullName>Knows left/right</fullName>
                </value>
                <value>
                    <fullName>Communicates feelings</fullName>
                </value>
                <value>
                    <fullName>Makes decisions effectively</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Email__c</fullName>
        <label>Emergency Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Phone__c</fullName>
        <label>Emergency Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Family_dos_donts__c</fullName>
        <description>Family dos/don&apos;ts.</description>
        <inlineHelpText>Family dos/don&apos;ts.</inlineHelpText>
        <label>Family dos donts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favorite_Activities__c</fullName>
        <description>Participant&apos;s favorite activities or topics.</description>
        <inlineHelpText>Participant&apos;s favorite activities or topics.</inlineHelpText>
        <label>Favorite Activities or Topics</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fears_or_Dislikes__c</fullName>
        <description>Participant&apos;s fears or dislikes</description>
        <inlineHelpText>Participant&apos;s fears or dislikes</inlineHelpText>
        <label>Fears or Dislikes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fingerprint_Clearance_Expiration_Date__c</fullName>
        <label>FCC Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fingerprint_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fingerprint Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstAdventureDate__c</fullName>
        <description>It shows the date of the first adventure in which this contact participated.</description>
        <label>FirstAdventureDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Aid_Certification_Expiration_Date__c</fullName>
        <label>1st Aid Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Aid_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Aid Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follows_Directions__c</fullName>
        <description>What kind of directions the participant can follow.</description>
        <inlineHelpText>What kind of directions the participant can follow.</inlineHelpText>
        <label>Follows Directions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>1-step</fullName>
                </value>
                <value>
                    <fullName>2-steps</fullName>
                </value>
                <value>
                    <fullName>3-steps</fullName>
                </value>
                <value>
                    <fullName>complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frustration_Tolerance__c</fullName>
        <description>Level of frustration tolerance that the participant has.</description>
        <inlineHelpText>Level of frustration tolerance that the participant has.</inlineHelpText>
        <label>Frustration Tolerance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__First_Volunteer_Date__c</fullName>
        <inlineHelpText>The first Volunteer Hours Start Date</inlineHelpText>
        <label>First Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Last_Volunteer_Date__c</fullName>
        <inlineHelpText>The latest Volunteer Hours End Date</inlineHelpText>
        <label>Last Volunteer Date</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Unique_Volunteer_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Auto_Reminder_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Contact does not want to receive automatic reminder emails about their upcoming shifts.  Used in the &quot;Volunteer Hours Reminder Email&quot; workflow rule.</inlineHelpText>
        <label>Volunteer Auto-Reminder Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Availability__c</fullName>
        <label>Volunteer Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekdays</fullName>
                </value>
                <value>
                    <fullName>Weekends</fullName>
                </value>
                <value>
                    <fullName>Mornings</fullName>
                </value>
                <value>
                    <fullName>Evenings</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Hours__c</fullName>
        <inlineHelpText>Total number of Hours that are Completed. Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Last_Web_Signup_Date__c</fullName>
        <inlineHelpText>The date of the most recent volunteer signup from the web.  Used to trigger workflow for notifications and thank you emails.</inlineHelpText>
        <label>Volunteer Last Web Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Manager_Notes__c</fullName>
        <inlineHelpText>Notes about the volunteer that the volunteer manager or organization staff want to record.</inlineHelpText>
        <label>Volunteer Manager Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Notes__c</fullName>
        <inlineHelpText>Notes from the volunteer.  Note that the web signup form appends the volunteers comments to this field.</inlineHelpText>
        <label>Volunteer Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Organization__c</fullName>
        <inlineHelpText>The organization, company, or group the contact is volunteering on behalf of.</inlineHelpText>
        <label>Volunteer Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
        <inlineHelpText>Select the skill(s) this contact has that should be used to find volunteer jobs.</inlineHelpText>
        <label>Volunteer Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kayaking</fullName>
                </value>
                <value>
                    <fullName>Hiking</fullName>
                </value>
                <value>
                    <fullName>Camping</fullName>
                </value>
                <value>
                    <fullName>Cycling</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>ASL</fullName>
                </value>
                <value>
                    <fullName>Computer usage/Office work</fullName>
                </value>
                <value>
                    <fullName>Marketing/Social Media</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Status__c</fullName>
        <label>Volunteer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>New Sign Up</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of the Participant or Volunteer</description>
        <inlineHelpText>Gender of the Participant or Volunteer</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Activity_Other__c</fullName>
        <description>Other information that DA should know about participant&apos;s general activity.</description>
        <inlineHelpText>Other information that DA should know about participant&apos;s general activity.</inlineHelpText>
        <label>Other Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goals__c</fullName>
        <description>Goal/reason of the participant to join DA.</description>
        <inlineHelpText>Goal/reason of the participant to join DA.</inlineHelpText>
        <label>Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hand_Eye_Coordination__c</fullName>
        <description>Quality of hand-eye coordination.</description>
        <label>Hand-eye Coordination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Quality</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hand_Grip__c</fullName>
        <description>Quality of hand grip of the participant.</description>
        <inlineHelpText>Quality of hand grip of the participant.</inlineHelpText>
        <label>Describe Hand-grip</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No concerns</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <description>Participant/Volunteer Height</description>
        <inlineHelpText>Enter height in feet&apos; &amp; inches&quot;. Example 5&apos; 7&quot;</inlineHelpText>
        <label>Height (Ft&apos; Inches&quot;)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
</CustomObject>